# speech2subtitles

./: .gitignore  CLAUDE.md  GUI_README.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  SYSTEM_AUDIO_GUIDE.md  gui_main.py  main.py  pyproject.toml  pytest.ini  requirements.txt  transcribe_test_mp4_sherpa_onnx.py
.claude/: file_queue_feature.md  file_transcription_implementation.md  index.json  vad_manager_completion_summary.md  video_file_support_fix.md
.spec-workflow/: session.json
config/: README.md  gui_config.json
doc/: 高风险操作清单.md
docs/: SUBTITLE_DISPLAY_EXAMPLES.md  SUBTITLE_DISPLAY_GUIDE.md  SYSTEM_AUDIO_GUIDE.md  TranscriptionPipeline事件流转分析.md  config-refactor-progress.md  deployment.md  installation.md  troubleshooting.md  usage.md
docs/ui-mockups/: main-window-redesign-v2.html
models/: sherpa-onnx-sense-voice-zh-en-ja-ko-yue-2024-07-17
openspec/: project.md
src/: __init__.py
src/audio/: CLAUDE.md  __init__.py  capture.py  file_capture.py  models.py  soundcard_capture.py  soundcard_compat.py
src/config/: CLAUDE.md  __init__.py  file_manager.py  loader.py  manager.py  models.py
src/coordinator/: CLAUDE.md  __init__.py  (+1 more)
tests/: __init__.py  test_audio.py  test_config.py  test_coordinator.py  test_gpu.py  test_integration.py  test_loopback_mic.py  test_offline-qwen3-asr-decode-files.py  test_output.py  test_silero-vad_asr.py  test_silero-vad_base.py  test_silero-vad_steam.py  test_simulate-streaming-sense-voice-microphone.py  test_ten-vad_asr.py  test_ten-vad_base.py  test_ten-vad_stream.py  test_transcription.py  test_utils.py  test_vad-microphone.py  test_vad-system.py  test_vad_detector.py  test_vad_manager.py
tools/: audio_info.py  gpu_info.py  patch_sherpa_onnx_gpu_runtime.ps1  performance_optimizer.py  performance_test.py  vad_test.py
(+128 files in other folders)
